fullSandbox11072023/force-app/main/default/objects/QM_SFDC_Query__x/QM_SFDC_Query__x.object-meta.xml
<CustomObject>
    <externalDataSource>SAP_OData</externalDataSource>
    <externalName>QM_SFDC_Query</externalName>
    <label>QM_SFDC_Query</label>
    <pluralLabel>QM_SFDC_Query</pluralLabel>
</CustomObject>