fullSandbox11072023/force-app/main/default/objects/QM_SFDC_Query__x/fields/EccAuthorized__c.field-meta.xml
<CustomField>
    <fullName>EccAuthorized__c</fullName>
    <description>EccAuthorized</description>
    <externalDeveloperName>EccAuthorized</externalDeveloperName>
    <label>EccAuthorized</label>
    <length>1</length>
    <type>Text</type>
</CustomField>