fullSandbox11072023/force-app/main/default/objects/QM_SFDC_Query__x/fields/ImportSuccessful__c.field-meta.xml
<CustomField>
    <fullName>ImportSuccessful__c</fullName>
    <description>ImportSuccessful</description>
    <externalDeveloperName>ImportSuccessful</externalDeveloperName>
    <label>ImportSuccessful</label>
    <length>1</length>
    <type>Text</type>
</CustomField>