fullSandbox11072023/force-app/main/default/objects/QM_SFDC_Query__x/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Message</description>
    <externalDeveloperName>Message</externalDeveloperName>
    <label>Message</label>
    <length>220</length>
    <type>Text</type>
</CustomField>