fullSandbox11072023/force-app/main/default/objects/QM_SFDC_Query__x/fields/Qmnum__c.field-meta.xml
<CustomField>
    <fullName>Qmnum__c</fullName>
    <description>Qmnum</description>
    <externalDeveloperName>Qmnum</externalDeveloperName>
    <label>Qmnum</label>
    <length>12</length>
    <type>Text</type>
</CustomField>