fullSandbox11072023/force-app/main/default/objects/QM_SFDC_Query__x/fields/SfdcApprover__c.field-meta.xml
<CustomField>
    <fullName>SfdcApprover__c</fullName>
    <description>SfdcApprover</description>
    <externalDeveloperName>SfdcApprover</externalDeveloperName>
    <label>SfdcApprover</label>
    <length>12</length>
    <type>Text</type>
</CustomField>