fullSandbox11072023/force-app/main/default/objects/QM_SFDC_Query__x/fields/ZimportDate__c.field-meta.xml
<CustomField>
    <fullName>ZimportDate__c</fullName>
    <description>ZimportDate</description>
    <externalDeveloperName>ZimportDate</externalDeveloperName>
    <label>ZimportDate</label>
    <type>DateTime</type>
</CustomField>