fullSandbox11072023/force-app/main/default/objects/QM_SFDC_Query__x/fields/ZimportTime__c.field-meta.xml
<CustomField>
    <fullName>ZimportTime__c</fullName>
    <description>ZimportTime</description>
    <externalDeveloperName>ZimportTime</externalDeveloperName>
    <label>ZimportTime</label>
    <length>16</length>
    <type>Text</type>
</CustomField>