fullSandbox11072023/force-app/main/default/objects/QM_SFDC_Query__x/fields/Zzindex__c.field-meta.xml
<CustomField>
    <fullName>Zzindex__c</fullName>
    <description>Zzindex</description>
    <externalDeveloperName>Zzindex</externalDeveloperName>
    <label>Zzindex</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>